최종 공유 버전

--- a/신용카드 사용자 연체 예측(연습 대회))/0810_for_share.ipynb
+++ b/신용카드 사용자 연체 예측(연습 대회))/0810_for_share.ipynb
@@ -68,7 +68,7 @@
         "# 0810\n",
         "\n",
         "#### 결측치 처리\n",
-        "+ 희영님 버전을 살린다. (0의 의지)\n",
+        "+ 희*님 버전을 살린다. \n",
         "+ R로 다시 bake\n",
         "\n",
         "#### 변수 점검\n",
@@ -123,7 +123,7 @@
         "test1 = pd.read_csv(test_path)\n",
         "\n",
         "\n",
-        "# 희영 결측치 채운 버전\n",
+        "# 희* 결측치 채운 버전\n",
         "train_path = join(BASE_DIR,'daconProj', 'baked_train.csv')\n",
         "val_path = join(BASE_DIR,'daconProj', 'baked_val.csv')\n",
         "test_path  = join(BASE_DIR,'daconProj', 'baked_test.csv')\n",
@@ -313,7 +313,7 @@
         "outputId": "63556513-9ce0-4ea4-fbc4-0314fd3a39ff"
       },
       "source": [
-        "# 희영 버전(R에서 대부분의 전처리 한 버전) 비율\n",
+        "# 희* 버전(R에서 대부분의 전처리 한 버전) 비율\n",
         "data2['occyp_type'].value_counts(normalize=True)"
       ],
       "execution_count": null,
@@ -1817,7 +1817,7 @@
       "source": [
         "for df in [data,test]:\n",
         "  # 나이\n",
-        "  df['Age'] = df['DAYS_BIRTH'] // 365 # 희영님 버전은 scaling, trasformatioin 다 된 상태라 이 변수 만들기가 어려웠습니다. 그래서 다시 bake.\n",
+        "  df['Age'] = df['DAYS_BIRTH'] // 365 # 희*님 버전은 scaling, trasformatioin 다 된 상태라 이 변수 만들기가 어려웠습니다. 그래서 다시 bake.\n",
         "  # 근속년수\n",
         "  df['EMPLOYED'] = df['DAYS_EMPLOYED'] // 365\n",
         "  # 능력\n",
